[package]
name = "subscan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = {version ="4.5.37", features = ["derive"] }
crossbeam-channel = "0.5.15"
hickory-client = "0.25.2"
num_cpus = "1.16.0"
serde = { version="1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
